# softtri

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: bench.rs  softbuffer.rs  textured.rs  triangle.rs
src/: color.rs  lib.rs  math.rs  point.rs  texture.rs  vertex.rs
