[package]
name = "softtri"
version = "0.1.0"
description = "a software triangle renderer"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/softtri"
repository = "https://github.com/PixelDoted/softtri"

[dependencies]
indexmap = "2.0.2"
rand = "0.8.5"
rayon = "1.8.0"

[dev-dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
softbuffer = "0.3"

[[example]]
name = "triangle"

[[example]]
name = "bench"

[[example]]
name = "softbuffer"